Updated dependencies, updated to Java 9. Attempted fix on reconnect issue.